--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -34,7 +34,9 @@
                                     <constraint firstAttribute="height" constant="48" id="Y22-OO-UMD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Login"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e5V-UQ-7mA"/>
                                 </connections>
@@ -100,10 +102,94 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="450" y="429"/>
+            <point key="canvasLocation" x="-226" y="223"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="2OC-gT-azV">
+            <objects>
+                <viewController id="CFK-J0-0SZ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xoM-OP-aIi"/>
+                        <viewControllerLayoutGuide type="bottom" id="TRJ-UD-fuo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="90o-TK-YC0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" image="list" id="cE3-zw-dR6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZsH-gK-TIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1346" y="584"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Hw7-C3-oFB">
+            <objects>
+                <viewController id="PAZ-ah-YlN" customClass="MapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="N0U-bW-y5X"/>
+                        <viewControllerLayoutGuide type="bottom" id="llm-7D-G7h"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lhl-CP-AF0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ipc-cS-lFd">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                            </mapView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6es-BL-kQZ">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Y4u-qd-P8M"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="On The Map" id="xjF-vo-LGB"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6es-BL-kQZ" firstAttribute="top" secondItem="N0U-bW-y5X" secondAttribute="bottom" id="DRM-Ko-fQE"/>
+                            <constraint firstItem="ipc-cS-lFd" firstAttribute="leading" secondItem="lhl-CP-AF0" secondAttribute="leading" id="HBY-S4-hVa"/>
+                            <constraint firstItem="ipc-cS-lFd" firstAttribute="top" secondItem="6es-BL-kQZ" secondAttribute="bottom" id="Xyw-bj-B8d"/>
+                            <constraint firstItem="6es-BL-kQZ" firstAttribute="leading" secondItem="lhl-CP-AF0" secondAttribute="leading" id="ZBK-ZA-pDc"/>
+                            <constraint firstAttribute="trailing" secondItem="6es-BL-kQZ" secondAttribute="trailing" id="hpC-Gf-Qb0"/>
+                            <constraint firstItem="llm-7D-G7h" firstAttribute="top" secondItem="ipc-cS-lFd" secondAttribute="bottom" id="lgH-H5-6dj"/>
+                            <constraint firstAttribute="trailing" secondItem="ipc-cS-lFd" secondAttribute="trailing" id="oXn-v0-1yO"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" image="map" id="ThD-zh-xM3"/>
+                    <connections>
+                        <outlet property="mapView" destination="ipc-cS-lFd" id="Wxb-NQ-Lw0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6S1-am-320" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1346" y="-77"/>
+        </scene>
+        <!--Master Tab Controller-->
+        <scene sceneID="tfI-Qi-rrc">
+            <objects>
+                <tabBarController storyboardIdentifier="MasterTabController" id="pq3-js-c3q" userLabel="Master Tab Controller" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Sjg-op-SG8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="PAZ-ah-YlN" kind="relationship" relationship="viewControllers" id="eqn-ya-RKS"/>
+                        <segue destination="CFK-J0-0SZ" kind="relationship" relationship="viewControllers" id="dP7-kx-iDi"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UTl-Zs-kEV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="514" y="223"/>
         </scene>
     </scenes>
     <resources>
+        <image name="list" width="32" height="32"/>
+        <image name="map" width="32" height="32"/>
         <image name="udacity" width="256" height="256"/>
     </resources>
 </document>
